<resources>
    <string name="app_name">DemoBugFree</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">BugFreeram!</string>
    <string name="slide_1_desc">We provide Programming Solution</string>

    <string name="slide_2_title">Welcome CodingZone</string>
    <string name="slide_2_desc">Book cources for your Coading</string>

    <string name="slide_3_title">BugFreeRam</string>
    <string name="slide_3_desc">Best Tutorial for Every Programming</string>

    <string name="slide_4_title">World Centre</string>
    <string name="slide_4_desc">we provide a worldwide Quality of online Coding </string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="tv_reglogin">Login</string>

    <string name="tv_welcome"> Welcome</string>
    <string name="tv_regemail">Email</string>
    <string name="tv_phoneno">Phone Number</string>
    <string name="tv_regpass">Password</string>
    <string name="tv_hintemail">Email</string>
    <string name="btn_signup">Sign Up</string>
    <string name="tv_alreadyreg">Already registered ?</string>

    <string name="drawer_open">Open now</string>
    <string name="drawer_close">Open now</string>

    <string name="tv_signin">SIGN IN</string>
    <string name="txt_hintemail"> Email</string>
    <string name="tv_pass"> Password </string>
    <string name="txt_forgotpass">Forgot Password </string>
    <string name="btn_login"> Login</string>
    <string name="tv_dnthaveaccount">Dont have an Account ? </string>
    <string name="tv_registernow"> Register Now </string>
    <string name="emailerror"> Enter Valid Email</string>
    <string name="nameerror"> Enter a valid Pass</string>
    <string name="txt_hintfirstname">First Name</string>
    <string name="tv_lastname">Last Name</string>


    <string name="tv_textinyourlease"> TradeInYourLease </string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_scrolling">Home</string>
    <string name="sale">Sale Up To 50% OFF</string>
    <string name="brand_name">NIKE NEW ARRIVAL STORE</string>
    <string name="price">$3,200</string>
    <string name="womens_collection">Special Womens Collection This Weekend</string>
    <string name="login_suggestion">Log in to get a personalized experience and quick checkout</string>

    <string name="menu_left"> &#xf0c9; </string>
    <string name="search_itv"> &#xf002; </string>
    <string name="menu_middle"> &#xf009; </string>
    <string name="icon_shopping_cart">&#xf0f3;</string>
    <string name="icon_search">&#xf002;</string>
    <string name="icon_menu">&#xf142;</string>

    <string name="text_home">Home Fragment</string>
    <string name="text_notifications">Notifications Fragment</string>
    <string name="text_search">Search Fragment</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>

    <string name="ok_text">Ok </string>

    <string name="error_message_loading_users">There seems to have been some error.</string>
    <string name="default_message_loading_users">Press the button to load people!</string>
    <string name="github">Github</string>


    <string name="hello_world">Hello world!</string>
    <string name="add_image">Add Image</string>
    <string name="title_activity_display_image">DisplayImage</string>
    <string name="image_information">Image Information</string>
</resources>
