<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize"
    android:layout_gravity="start"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/img_menuleft"
            android:gravity="start"
            android:padding="10sp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp" />


        <RelativeLayout
            android:id="@+id/rlyt_lasttwoicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true">


            <FrameLayout

                android:layout_centerVertical="true"
                android:id="@+id/frmLytShoppingCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.example.bugfreeram.samyak.Custom.IconTextView

                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="@string/search_itv"
                    android:id="@+id/search_view"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                  >


                </com.example.bugfreeram.samyak.Custom.IconTextView>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frmLytNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/frmLytShoppingCart">

                <com.example.bugfreeram.samyak.Custom.IconTextView
                    android:id="@+id/notification_bell_appbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="16dp"
                    android:text="@string/icon_shopping_cart"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/notification_counter_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/rounded_red_not"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="10"
                    android:textColor="@color/white"
                    android:textSize="7sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frmLytmenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/frmLytNotification">

                <com.example.bugfreeram.samyak.Custom.IconTextView
                    android:id="@+id/itv_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="16dp"
                    android:text="@string/icon_menu"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
                <!--
                                <TextView
                                    android:id="@+id/menu_counter_txt"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="end"
                                    android:layout_marginTop="8dp"
                                    android:layout_marginRight="8dp"
                                    android:background="@drawable/rounded_red_not"
                                    android:gravity="center"
                                    android:padding="3dp"
                                    android:text="10"
                                    android:textColor="@color/white"
                                    android:textSize="7sp"
                                    android:textStyle="bold" />-->

            </FrameLayout>

        </RelativeLayout>


    </RelativeLayout>
</android.support.v7.widget.Toolbar>

